corrections file upload

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <div class="row align-items-center">
                 <div class="col-md-6">
                     <h1 class="mb-4">20 Best Timesheet Software for Accurate Time Management</h1>
-                    <span class="ms-meta ms-font-inter">Updated on Oct 20, 2024</span>
+                    <span class="ms-meta ms-font-inter">Updated on Dec 18, 2024</span>
                     <div class="d-flex ms-meta-content mt-4 mb-4 mb-md-0">
                         <div class="d-flex">
                             <img src="assets/images/eric_picture.png" class="img-fluid ms-meta-img rounded-circle" alt="Image">
@@ -32,7 +32,7 @@
                     </div>
                 </div>
                 <div class="col-md-6">
-                    <img src="assets/images/clock-in-clock-out-app.jpg" class="img-fluid ms-main-img" alt="Image">
+                    <img src="assets/images/timesheet_software.png" class="img-fluid ms-main-img" alt="Image">
                 </div>
             </div>
         </div>
@@ -74,7 +74,6 @@
                             <ul class="ms-features-list ms-cons-list p-0">
                                 <li>Functionality over aesthetics – the design’s minimalistic</li>
                                 <li>Separate logins for roles</li>
-                                <li>Correcting or adding manual time punches can be complex for some users</li>
                             </ul>
                         </div>
                     </div>
@@ -82,9 +81,9 @@
                         <h3 class="fw-medium m-0">Pricing</h3>
                         <ul class="ms-arrow-list">
                             <li>No free plan available</li>
-                            <li>Standard: $3.99/user/month + $19 monthly base fee</li>
-                            <li>Pro: $4.99/user/month + $19 monthly base fee</li>
-                            <li>Premium: $6.99/user/month + $19 monthly base fee</li>
+                            <li>Starter: $4.49 per user/month + $19 monthly base fee</li>
+                            <li>Pro: $5.99 per user/month + $19 monthly base fee</li>
+                            <li>Enterprise: $10.99 per user/month + $19 monthly base fee</li>
                             <li>Enterprise: quote on demand</li>
                         </ul>
                     </div>
@@ -127,7 +126,6 @@
                     </div>
                     <div class="ms-pricing-box">
                         <h3 class="fw-medium m-0">Pricing</h3>
-                        <p>Paymo is currently running an attractive autumn promotion, this very month of October: up to 60% off on any annual plan. Snag the discount here before the offer expires.</p>
                         <ul class="ms-arrow-list">
                             <li>Free plan for any number of users</li>
                             <li>Starter: $3.90/user/month</li>
